--- a/style.css
+++ b/style.css
@@ -1,261 +1,218 @@
-*{
-    box-sizing: border-box;
+body, html {
+    margin: 0   ;
     padding: 0;
-    margin: 0;
-    font-family: poppins,sans-serif;
-    text-decoration: none;
+    font-family: 'Poppins', sans-serif;
+    color: #fff;
+    height: 100%;
+    overflow-x: hidden;
 }
-body{
-    overflow-x: hidden; 
-}
-.hero-header{
+
+.video-container {
+    position: absolute;
+    top: 0;
+    left: 0;
     width: 100%;
     height: 100%;
-    min-height: 100vh;
-    background: #222;   
+    overflow: hidden;
+    z-index: -1;
 }
-.wrapper{
-    width: 1280px;
-    max-width: 95%;
-    margin: 0;
-    padding: 0 20px;
+
+.video-container video {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
 }
-header{
-    padding: 40px 0 30px;
+
+.content {
+    position: relative;
+    z-index: 1;
+    padding: 20px;
+}
+
+header {
     display: flex;
     justify-content: space-between;
     align-items: center;
+    background-color: #ff5a603b;
+    /* padding: 20px 50px; */
     flex-wrap: wrap;
-}   
-.logo{
-    display: inline-flex;
-    justify-content: center;
-    align-items: center; 
+    flex-direction: column;
+    /* padding: 20px 50px; */
 }
-.logo i{
+
+.logo {
+    display: flex;
+    align-items: center;
+}
+
+.logo i {
     height: 45px;
     width: 45px;
-    background-color: #007ced;
+    background-color: #9717d3;
     border-radius: 50%;
     color: #fff;
     font-weight: 800;
-    font-size: 1.5rem;
+    font-size: 2.5rem;
     padding: 10px;
     margin-right: 5px;
     cursor: pointer;
     text-align: center;
 }
-.logo .logo-text{
+
+.logo-text {
     font-size: 24px;
+    font-weight: 600;
+}
+
+nav ul {
+    list-style: none;
+    display: flex;
+    gap: 20px;
+}
+
+nav ul li {
+    display: inline;
+}
+
+nav ul li a {
+    text-decoration: none;
+    font-weight: bolder;
+    color: #ffffff;
     font-weight: 500;
-    color: #fff;
+    padding: 10px 20px;
+    border-radius: 5px;
+    transition: background 0.3s ease;
 }
-nav.togglebtn{
-    width: 35px;
-    height: 35px;
-    position: absolute;
-    top: 45px;
-    right: 3%;
-    z-index: 5;
-    cursor: pointer;
+
+nav ul li a:hover {
+    background-color: rgba(255, 255, 255, 0.2);
 }
-nav .togglebtn span{
-    display: block;
-    background-color: #007ced;
-    margin: 5px 0px;
-    width: 8%;
-    height: 3px;
-    transition: 0.3s;
-    transition-property: transform, opacity;
-    ;
-}
-nav .navlinks{
-    list-style-type: none;
-}
-nav .navlinks li{
-    display: inline-block;
-}
-nav .navlinks li a{
-    color: #e5e5e5;
-    margin-right: 2.5rem; 
-}
-.he-pic{
-    height: 1000%;
-    width: 120%;
-}
-.container{
+
+.container {
     display: flex;
     justify-content: space-around;
     align-items: center;
-    padding: 4rem;
+    /* padding: 4rem; */
 }
-.container .hero-pic{
-    width: 300px;
-    height: 300px;
+
+.container .hero-pic {
+    width: 900px;
+    height: 250px;
     border-radius: 50%;
     overflow: hidden;
-    border: 15px solid #444;
-    box-shadow: 5px 7px 25px rgba(0,0,0,0.5);
+    border: 5px solid #ff5a6034;
+    box-shadow: 5px 7px 25px rgba(255, 74, 74, 0.5);
 }
-.hero-pic img{
-    height: 115%;
+.hero-pic img {
+    height: 125%;
     width: 100%;
     transition: 0.5s;
 }
-.hero-pic img:hover{
+
+.hero-pic img:hover {
     transform: scale(1.2);
 }
 .hero-text{
-    max-width: 500px;
-    display: flex;
-    flex-direction: column;
+    padding-left: 45px;
 }
-.hero-text h5{
-    color: #e5e5e5;
-    font-size: 14px;
 
-}
-.hero-text h5 span{
-    color: #007ced;
-    font-size: 16px;
-}
-.hero-text h1{
-    color: #007ced;
-    font-size: 3rem;
-}
-.hero-text p{
-    color: #e5e5e5;
-}
-.btn-group{
-    margin: 45px 0;
-}
-.btn-group .btn{
-    border-color: #d5d5d5;
-    color: #fff;
-    background-color: #333;
-    padding: 12px 25px;
-    margin: 5px 0;
-    margin-right: 7px;
-    border-radius: 30px;
-    border:2px solid #e5e5e5;
-    box-shadow: 0 10px 10px -8px rgb(0 0 0 / 78%);
-}
-.btn.active{
-    border-color: #007ced;
-}
-.hero-text .social i{
-    color: #e5e5e5;
+.hero-text h5 {
     font-size: 18px;
-    margin-right: 10px;
-    transition: 0.5s;
-}
-.hero-text .social i:hover{
-    color: #007ced;
-    transform: rotate(1deg);
-}
-@media(max-width:930px)
-{
-    nav .togglebtn{
-        display: initial;
-    }
-    .click{
-    top: 45px;
-    }
-    .click span{
-        position: relative;
-        margin-top: 12px;
-    }
-    .click span:first-child{
-        transform: rotate (-45deg);
-    }
-    .click span:nth-child(2)
-    {
-        opacity: 0;
-        margin: 0;
-    }
-    .click span:last-child{
-        transform: rotate(45deg);
-        top: 0;
-    }
-    nav.navlinks{
-        position: absolute;
-        top: 110px;
-        right: 0;
-        bottom: 0;
-        width: 60%;
-        height: 100vh;
-        background-color:#222;
-        z-index: 3;
-        box-shadow: 5px 13px 30px rgba(0,0,0,0.1);
-        transition: 0.5s;
-        padding: 25px 0px;
-    }
-    nav .navlinks li{
-        display: block;
-    }
-    nav .navlinks li a{
-        display: block;
-        margin-bottom: 15px;
-        text-align: center;
-    }
-    nav .navlinks.open{
-        right: 0;
-    }
-}
-@media(max-widhth:768px)
-{
-    .container{
-        flex-direction: column;
-        padding-top: 2rem;
-    }
-    .hero-text{
-        padding: 40px  0px;
-    }
-}
-footer {
-    background-color: #333;
-    color: #fff;
-    padding: 20px 0;
-    text-align: center;
+    font-weight: 300;
 }
 
-.footer-content h3 {
-    margin: 0;
-    font-size: 24px;
+.hero-text h5 span {
+    font-weight: 600;
+    color: #ff5a5f;
 }
 
-.footer-content p {
+.hero-text h1 {
+    font-size: 48px;
     margin: 10px 0;
+    font-weight: 600;
+}
+
+.hero-text p {
     font-size: 16px;
+    line-height: 1.6;
+    margin-bottom: 20px;
 }
 
-.footer-content ul {
-    list-style-type: none;
-    padding: 0;
+.btn-group {
     margin: 20px 0;
+    align-items: center;
+    display: flex;
+    flex-direction: row;
+    padding-right: 70px;
+    justify-content: right;
 }
 
-.footer-content ul li {
-    display: inline;
+.btn {
+    text-decoration: none;
+    padding: 10px 20px;
+    margin-right: 10px;
+    background-color: #ff5a5f;
+    color: #fff;
+    border-radius: 5px;
+    transition: background 0.3s ease;
+}
+
+.btn:hover {
+    background-color: #e14f50;
+}
+.social-accounts{
+    display: flex;
+    justify-content: flex-end;
+    padding-right: 70px;
+    padding-bottom: 30px;
+
+
+
+}
+.social-accounts a {
+    margin-right: 10px;
+    transition: transform 0.3s ease;
+}
+
+.social-accounts a:hover {
+    transform: scale(1.2);
+}
+
+footer {
+    text-align: center;
+    padding: 30px;
+    background-color: rgba(0, 0, 0, 0.7);
+}
+
+footer h3 {
+    margin-bottom: 10px;
+}
+
+footer p {
+    margin-bottom: 20px;
+}
+
+footer .socials {
+    list-style: none;
+    padding: 0;
+}
+
+footer .socials li {
+    display: inline-block;
     margin: 0 10px;
 }
 
-.footer-content ul li a {
-    color: #fff;
+footer .socials li a {
     text-decoration: none;
-    font-size: 16px;
+    color: #fff;
+    transition: color 0.3s ease;
 }
 
-.footer-bottom {
-    margin-top: 20px;
-    font-size: 14px;
+footer .socials li a:hover {
+    color: #ff5a5f;
 }
 
 .footer-bottom p {
-    margin: 0;
+    margin-top: 20px;
+    font-size: 14px;
 }
-
-.footer-content ul li a:hover {
-    color: #f0f0f0;
-}
-
